--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 src/main/java/accenture_training
-
+nbactions.xml
+/.idea
 
 ### VS Code ###
 .vscode/
